--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/redux-form": "^8.3.1",
     "axios": "^0.19.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -22,13 +27,13 @@
     "react-input-mask": "^2.0.4",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "redux-form": "^8.3.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
