--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux-form": "^8.3.1",
     "axios": "^0.19.0",
     "eslint-config-prettier": "^6.11.0",
