--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^26.0.20",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.31",
+    "@types/qs": "^6.9.6",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-input-mask": "^3.0.0",
